# protobuf-dll-cmake

./: .gitignore  CMakeLists.txt  README.md  build  clean
src/: dllMain.cpp  main.cpp
